--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Snake</h1>
+  <div class="container">
+    <div class="box1 box">1</div>
+    <div class="box2 box">2</div>
+    <div class="box3 box">3</div>
+    <div class="box4 box">4</div>
+    <div class="box5 box">5</div>
+    <div class="box6 box">6</div>
+  </div>
 </body>
 </html>
